tests/gabc-dump/should-fail/Dominican-bar-too-high.gabc
name: Dominican bar too high;
%%
(c4) g(g) (;8)
